# dflash-voice

./: .gitignore  README.md  benchmark_tts_mlx.py  pyproject.toml
benchmark_gpu/depth_perf_ablation/: README.md  deploy_fish_eager.yaml  fish_depth_ablation.py  patch_depth_loop.diff
benchmark_gpu/modal_endpoints/: vllm_omni_fish.py  vllm_omni_qwen3.py
benchmark_mlx/: bench_tts_mlx.py
dflash_voice/: benchmark.py
dflash_voice/tts_mlx/: __init__.py  _common.py  fish.py  qwen3.py
tests/: test_fish_generate.py  test_qwen3_generate.py
tts_mlx/: __init__.py  fish.py  qwen3.py
